--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,3 +67,30 @@ a {
 .sot-steel {
   content: url(/assets/steel.svg);
 }
+
+.alert-item {
+  position: relative;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
+
+.alert-item:first-of-type {
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.alert-item:last-of-type {
+  border-bottom: none;
+  border-end-start-radius: 0.25rem;
+  border-end-end-radius: 0.25rem;
+}
+
+.alert-item:hover::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: " ";
+  backdrop-filter: brightness(90%);
+  cursor: pointer;
+}
