--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,7 +69,6 @@ a {
 }
 
 .alert-item {
-  position: relative;
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 }
 
@@ -84,13 +83,7 @@ a {
   border-end-end-radius: 0.25rem;
 }
 
-.alert-item:hover::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  content: " ";
+.alert-item:hover {
   backdrop-filter: brightness(90%);
   cursor: pointer;
 }
