--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,8 +12,13 @@ body {
 
 body {
   background-color: #171923 !important;
-  height: 100vh;
-  overflow: hidden;
+}
+
+@media (min-width: 768px)  {
+  body {
+    height: 100vh;
+    overflow: hidden;
+  }
 }
 
 a {
@@ -143,4 +148,33 @@ input[type="file"]::file-selector-button:hover {
 
 ::-webkit-scrollbar-thumb:hover {
   background: hsla(341, 81%, 63%, 1);
+}
+
+.ql-snow .ql-picker * {
+  color: white;
+  stroke: white;
+}
+
+.ql-snow .ql-picker *:hover {
+  color: hsla(176, 57%, 58%, 1) !important;
+  stroke: hsla(176, 57%, 58%, 1) !important;
+}
+
+.ql-snow .ql-picker.ql-expanded .ql-picker-label {
+  color: white;
+  stroke: white;
+}
+
+.ql-snow .ql-picker-options {
+  background-color: hsla(258, 14%, 20%, 1);
+}
+
+.ql-formats button svg * {
+  color: white !important;
+  stroke: white !important;
+}
+
+.ql-formats button:hover svg * {
+  color: hsla(176, 57%, 58%, 1) !important;
+  stroke: hsla(176, 57%, 58%, 1) !important;
 }
